refonte totale site juju

--- a/typographyworks.html
+++ b/typographyworks.html
@@ -20,14 +20,15 @@
 
     <main>
   			<div class="frame">
-  				<div class="frame__pagetitle">Editorial works</div>
+  				<div class="frame__pagetitle">Typography works</div>
   				<div class="frame__title-wrap">
   					<h1 class="frame__title">Jutai</h1>
   				   <!-- <p class="frame__tagline"> &mdash; </a></p> -->
   				</div>
   					<div class="frame__links">
   					<a href="index.html">home</a>
-  				  <a href="brandingworks.html">next</a>
+            <a href="brandingworks.html">previous</a>
+  				  <a href="editorialworks.html">next</a>
   				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
   				</div>
   	<!--<div class="frame__social">
@@ -47,7 +48,7 @@
   				<div class="menu-draggable"></div>
   				<nav class="menu">
   					<div class="menu__item">
-  						<a class="menu__item-link">Editorial Works</a>
+  						<a class="menu__item-link">Typography </a>
   				<!--	<a class="menu__item-explore">explore</a> -->
   					</div>
   				</nav><!--menu-->
@@ -69,9 +70,9 @@
         <div id="cbp-so-scroller" class="cbp-so-scroller">
           <section class="cbp-so-section">
             <article class="cbp-so-side cbp-so-side-left">
-              <h2>Tutti Frutti</h2>
-                <p id="soustitre"> Réalisation d'un magazine autobiographique.</p>
-              <a href="tuttifrutti.html">see more</a>
+              <h2> Stencil Typography </h2>
+                <p id="soustitre"> Réalisation d'une typographie pochoir.</p>
+              <a href="editorialworks.html">see more</a>
             </article>
             <figure class="cbp-so-side cbp-so-side-right">
               <img src="img_home/ju.jpg" alt="img01">
@@ -83,22 +84,12 @@
             </figure>
             <article class="cbp-so-side cbp-so-side-right">
               <h2>Branding works</h2>
+                <p>Perhaps his most famous work was a painting entitled Convergence, which was a collage of
+                     colors splattered on a canvas that created masterful shapes and lines that evoke emotions and attack the eye. The painting was created in 1952, and is oil on canvas; 93.5 inches by 155 inches (Karmel, 1999). With Pollock's brushstrokes he was able to make handy use of colors, lines, textures, lights, and contrasting shapes. This painting is enormous and its size can only really be appreciated in person.</p>
                <a href="brandingworks.html">see more</a>
       </article>
           </section>
-          <section class="cbp-so-section">
-            <article class="cbp-so-side cbp-so-side-left">
-              <h2>Photographs and video making</h2>
-                <p>
-                Number One, 1949 embodies the artistic breakthrough Pollock reached
-                 between 1947 and 1950. It was painted in an old barn-turned-studio next to a small house on the East End of Long Island, where Pollock lived and worked from 1945 on. The property led directly to Accabonac Creek, where eelgrass marshes and gorgeous, watery light were a source of inspiration for him. </p>
-            </article>
-            <figure class="cbp-so-side cbp-so-side-right">
-              <img src="images/photography1.jpg" alt="img01">
-            </figure>
-          </section>
-
-
+    
         </div>
       </div>
       <script src="js/classie.js"></script>
