--- a/brandingworks.html
+++ b/brandingworks.html
@@ -27,7 +27,8 @@
   				</div>
   					<div class="frame__links">
   					<a href="index.html">home</a>
-  				  <a href="brandingworks.html">next</a>
+            <a href="editorialworks.html">previous</a>
+  				  <a href="typographyworks.html">next</a>
   				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
   				</div>
   	<!--<div class="frame__social">
@@ -37,14 +38,8 @@
   			<div class="page page--preview">
   				<div class="grid-wrap">
   					<div class="grid grid--layout-1">
-  						<div class="grid__item-wrap">
-                <div class="grid__item" style="background-image: url(img_home/1.jpg)">
-                  <a class="grid__item-explore">discover</a>
-                </div>
-            </div>
-  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/2.jpg)"></div></div>
-  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/3.jpg)"></div></div>
-  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/4.jpg)"></div></div>
+  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/invit_enm.jpg)"></div></div>
+  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/carton_enm.jpg)"></div></div>
 
   					</div>
 
@@ -77,59 +72,26 @@
         <div id="cbp-so-scroller" class="cbp-so-scroller">
           <section class="cbp-so-section">
             <article class="cbp-so-side cbp-so-side-left">
-              <h2>Editorial works</h2>
-                <p id="soustitre"> Réalisation d'un magazine autobiographique.</p>
-                <p> Travail de direction artistique avec création complète
-                  de l'iconographie et rédaction de l'intégralité des textes.</p>
+              <h2>La Manufacture</h2>
+                <p> Création de l'identité visuelle d'un centre culturel sur le thème des quatre éléments</p>
               <a href="editorialworks.html">see more</a>
             </article>
             <figure class="cbp-so-side cbp-so-side-right">
-              <img src="img_home/ju.jpg" alt="img01">
+              <img src="img_home/invit.jpg" alt="img01">
             </figure>
           </section>
           <section class="cbp-so-section">
             <figure class="cbp-so-side cbp-so-side-left">
-              <img src="images/invit_enm.jpg" alt="img01">
+              <img src="img_home/invit_enm.jpg" alt="img01">
             </figure>
             <article class="cbp-so-side cbp-so-side-right">
-              <h2>Branding works</h2>
-                <p>Perhaps his most famous work was a painting entitled Convergence, which was a collage of
-                     colors splattered on a canvas that created masterful shapes and lines that evoke emotions and attack the eye. The painting was created in 1952, and is oil on canvas; 93.5 inches by 155 inches (Karmel, 1999). With Pollock's brushstrokes he was able to make handy use of colors, lines, textures, lights, and contrasting shapes. This painting is enormous and its size can only really be appreciated in person.</p>
+              <h2>60 ans de l'Ecole Nationale de la Magistrature</h2>
+              <p> Ce projet consiste en la réalisation d'une identité visuelle à l'occasion
+                des 60 ans de l'ENM basée à Bordeaux.</p>
                <a href="brandingworks.html">see more</a>
       </article>
           </section>
-          <section class="cbp-so-section">
-            <article class="cbp-so-side cbp-so-side-left">
-              <h2>Photographs and video making</h2>
-                <p>
-                Number One, 1949 embodies the artistic breakthrough Pollock reached
-                 between 1947 and 1950. It was painted in an old barn-turned-studio next to a small house on the East End of Long Island, where Pollock lived and worked from 1945 on. The property led directly to Accabonac Creek, where eelgrass marshes and gorgeous, watery light were a source of inspiration for him. </p>
-            </article>
-            <figure class="cbp-so-side cbp-so-side-right">
-              <img src="images/photography1.jpg" alt="img01">
-            </figure>
-          </section>
-          <section class="cbp-so-section">
-            <figure class="cbp-so-side cbp-so-side-left">
-              <img src="images/typographie.jpg" alt="img01">
-            </figure>
-            <article class="cbp-so-side cbp-so-side-right">
-              <h2>Typography</h2>
-                <p> Pollock's freely admitted total retrenchment from traditional methods of oil painting was patently obvious in Lucifer. From the looks of its imagery, Lucifer begun in a similar vein to works of the previous year such as Eyes in the Heat. However, at some point in the process of painting, Pollock laid down his brush and began instead to drip and spatter his pigment, not quite completely covering the underlayer, into which he also embedded small pieces of gravel to increase the texture. </p>
-          </article>
-          </section>
-          <section class="cbp-so-section">
-            <article class="cbp-so-side cbp-so-side-left">
-              <h2>Drawings</h2>
-                  <p> At age eighteen, in early fall of 1930, Jackson Pollock left Los Angeles and went east, bent on becoming an artist. He had very little going for him other than his vocational fixation - his belief that "being an artist is life its self - living it I mean." This unpromising, uncompromising young man only lived about a quarter of a century longer. At his death his art was the most consequential and controversial ever to have been produced by American. Reflecting on the immense success of Pollock's work, his brother Sande offered his thoughts on it beginnings, which might, be said, have prompted a kindly counsellor to suggest a career switch to tennis or plumbing.
-                  </p>
-                  <a href="brandingworks.html">see more</a>
 
-            </article>
-            <figure class="cbp-so-side cbp-so-side-right">
-              <img src="images/acte4_1.jpg" alt="img01">
-            </figure>
-          </section>
 
         </div>
       </div>
