--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				</div>
 					<div class="frame__links">
 					<a href="https://www.ecv.fr/">ECV Paris</a>
-				<!--	<a href="https://tympanus.net/codrops/?p=40926">Article</a>
-					<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
+				<a href="">contact</a>
+				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
 				</div>
 	<!--<div class="frame__social">
 					<a href="#" aria-label="Link to Yuri's Behance profile"><img src="img/behance.svg" class="frame__social-behance" alt="Behance Logo"/></a>
@@ -41,14 +41,14 @@
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/typographie.jpg)"></div></div>
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/invit_enm.jpg)"></div></div>
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography1.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/a_flora.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/6.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/a_web.jpg)"></div></div>
+				<!--		<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/6.jpg)"></div></div>
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/7.jpg)"></div></div>
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/acte4_1.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/9.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/9.jpg)"></div></div> -->
 					</div>
           <div class="grid grid--layout-2">
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/10.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography1.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/11.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/12.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/13.jpg)"></div></div>
