--- a/typographyworks.html
+++ b/typographyworks.html
@@ -28,7 +28,6 @@
   					<div class="frame__links">
   					<a href="index.html">home</a>
             <a href="brandingworks.html">previous</a>
-  				  <a href="editorialworks.html">next</a>
   				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
   				</div>
   	<!--<div class="frame__social">
@@ -71,25 +70,27 @@
           <section class="cbp-so-section">
             <article class="cbp-so-side cbp-so-side-left">
               <h2> Stencil Typography </h2>
-                <p id="soustitre"> Réalisation d'une typographie pochoir.</p>
-              <a href="editorialworks.html">see more</a>
+                <p id="soustitre"> Réalisation d'une typographie modulaire et pochoir. Création de
+                l'intégralité de l'alphabet en bas de casse, nommage et réalisation d'une affiche.</p>
+              <a href="">see more</a>
             </article>
             <figure class="cbp-so-side cbp-so-side-right">
-              <img src="img_home/ju.jpg" alt="img01">
+              <img src="img_home/a_web.jpg" alt="img01">
             </figure>
           </section>
           <section class="cbp-so-section">
             <figure class="cbp-so-side cbp-so-side-left">
-              <img src="images/invit_enm.jpg" alt="img01">
+              <img src="img_home/typographie.jpg" alt="img01">
             </figure>
             <article class="cbp-so-side cbp-so-side-right">
-              <h2>Branding works</h2>
-                <p>Perhaps his most famous work was a painting entitled Convergence, which was a collage of
-                     colors splattered on a canvas that created masterful shapes and lines that evoke emotions and attack the eye. The painting was created in 1952, and is oil on canvas; 93.5 inches by 155 inches (Karmel, 1999). With Pollock's brushstrokes he was able to make handy use of colors, lines, textures, lights, and contrasting shapes. This painting is enormous and its size can only really be appreciated in person.</p>
-               <a href="brandingworks.html">see more</a>
+              <h2>Circus</h2>
+              <p id="soustitre"> Réalisation d'une affiche à l'occasion du concours étudiant
+                du festival de l'affiche d'Échirolles. Le thème de cette édition étant "Le Cirque" et en hommage à l'affiche polonaise.</p>
+
+               <a href="">see more</a>
       </article>
           </section>
-    
+
         </div>
       </div>
       <script src="js/classie.js"></script>
