improvement_rendu_prof

--- a/brandingworks.html
+++ b/brandingworks.html
@@ -38,8 +38,10 @@
   			<div class="page page--preview">
   				<div class="grid-wrap">
   					<div class="grid grid--layout-1">
+  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/manufacture1.jpg)"></div></div>
   						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/invit_enm.jpg)"></div></div>
-  						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/carton_enm.jpg)"></div></div>
+              <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/manufacture2.jpg)"></div></div>
+              <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/carton_enm.jpg)"></div></div>
 
   					</div>
 
@@ -72,12 +74,12 @@
         <div id="cbp-so-scroller" class="cbp-so-scroller">
           <section class="cbp-so-section">
             <article class="cbp-so-side cbp-so-side-left">
-              <h2>La Manufacture</h2>
+              <h2>La Manufacture <span> - Centre culturel </span></h2>
                 <p> Création de l'identité visuelle d'un centre culturel sur le thème des quatre éléments</p>
               <a href="editorialworks.html">see more</a>
             </article>
             <figure class="cbp-so-side cbp-so-side-right">
-              <img src="img_home/invit.jpg" alt="img01">
+              <img src="img_home/manufacture2.jpg" alt="img01">
             </figure>
           </section>
           <section class="cbp-so-section">
@@ -85,9 +87,9 @@
               <img src="img_home/invit_enm.jpg" alt="img01">
             </figure>
             <article class="cbp-so-side cbp-so-side-right">
-              <h2>60 ans de l'Ecole Nationale de la Magistrature</h2>
+              <h2>60 ans de l'ENM</h2>
               <p> Ce projet consiste en la réalisation d'une identité visuelle à l'occasion
-                des 60 ans de l'ENM basée à Bordeaux.</p>
+                des 60 ans de l'École Nationale de la Magistrature basée à Bordeaux.</p>
                <a href="brandingworks.html">see more</a>
       </article>
           </section>
