--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
   <main>
 			<div class="frame">
-				<div class="frame__pagetitle">Graphic Design Student</div>
+				<div class="frame__pagetitle">Graphic Design & International Strategy Student</div>
 				<div class="frame__title-wrap">
 					<h1 class="frame__title">Jutai</h1>
 				   <!-- <p class="frame__tagline"> &mdash; </a></p> -->
 				</div>
 					<div class="frame__links">
 					<a href="https://www.ecv.fr/">ECV Paris</a>
-				<a href="">contact</a>
+				<a href="contact.html">contact</a>
 				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
 				</div>
 	<!--<div class="frame__social">
@@ -37,31 +37,31 @@
 			<div class="page page--preview">
 				<div class="grid-wrap">
 					<div class="grid grid--layout-1">
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/ju.jpg)"></div></div>
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/typographie.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/invit_enm.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography1.jpg)"></div></div>
 						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/a_web.jpg)"></div></div>
-				<!--		<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/6.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/7.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/acte4_1.jpg)"></div></div>
-						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/9.jpg)"></div></div> -->
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/ju.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography1.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/invit_enm.jpg)"></div></div>
+					<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography2.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/pieceandlove1.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/manufacture1.jpg)"></div></div>
+						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/compause.jpg)"></div></div>
 					</div>
           <div class="grid grid--layout-2">
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography1.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url()"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/11.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/12.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/13.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/14.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/compause2.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/compause.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/15.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/16.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/17.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/)"></div></div>
     					</div>
     					<div class="grid grid--layout-3">
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/18.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography1.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/19.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/20.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/21.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/photography2.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/22.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/23.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/24.jpg)"></div></div>
@@ -70,7 +70,7 @@
     					</div>
     					<div class="grid grid--layout-4">
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/25.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/26.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/ju.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/27.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/28.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/29.jpg)"></div></div>
@@ -83,12 +83,23 @@
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/34.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/35.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/36.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/37.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/invit_enm.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/38.jpg)"></div></div>
-    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/39.jpg)"></div></div>
+    						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/manufacture1.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/40.jpg)"></div></div>
     						<div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/41.jpg)"></div></div>
     					</div>
+              <div class="grid grid--layout-6">
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url()"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/34.jpg)"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/35.jpg)"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/a_web.jpg)"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/37.jpg)"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url()"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img/39.jpg)"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url()"></div></div>
+                <div class="grid__item-wrap"><div class="grid__item" style="background-image: url(img_home/typographie.jpg)"></div></div>
+              </div>
     					<button class="gridback"><svg width="27px" height="15px" viewBox="0 0 27 15"><path d="M1.469 6.75l-.719.719 7.938 6.937.718-.719L1.47 6.75zM8.594.531L.75 7.375l.688.688L9.28 1.218 8.594.53zM1.406 6.938v1h24.75v-1H1.406z" fill="#de6565"/></svg></button>
     				</div><!-- /grid-wrap -->
 			</div><!-- /page -->
@@ -99,6 +110,10 @@
 						<a class="menu__item-link">Jutai</a>
 						<a class="menu__item-explore">explore</a>
 					</div>
+          <div class="menu__item">
+            <a class="menu__item-link">Packaging</a>
+            <a class="menu__item-explore" href="packagingworks.html">explore</a>
+          </div>
           <div class="menu__item">
             <a class="menu__item-link">Photographs</a>
             <a class="menu__item-explore" >explore</a>
