--- a/packagingworks.html
+++ b/packagingworks.html
@@ -20,14 +20,14 @@
 
     <main>
   			<div class="frame">
-  				<div class="frame__pagetitle">Typography works</div>
+  				<div class="frame__pagetitle">Packaging Works</div>
   				<div class="frame__title-wrap">
   					<h1 class="frame__title">Jutai</h1>
   				   <!-- <p class="frame__tagline"> &mdash; </a></p> -->
   				</div>
   					<div class="frame__links">
   					<a href="index.html">home</a>
-            <a href="brandingworks.html">previous</a>
+  				  <a href="brandingworks.html">next</a>
   				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
   				</div>
   	<!--<div class="frame__social">
@@ -47,7 +47,7 @@
   				<div class="menu-draggable"></div>
   				<nav class="menu">
   					<div class="menu__item">
-  						<a class="menu__item-link">Typography </a>
+  						<a class="menu__item-link">Packaging</a>
   				<!--	<a class="menu__item-explore">explore</a> -->
   					</div>
   				</nav><!--menu-->
@@ -69,27 +69,15 @@
         <div id="cbp-so-scroller" class="cbp-so-scroller">
           <section class="cbp-so-section">
             <article class="cbp-so-side cbp-so-side-left">
-              <h2> Florali <span>- Stencil Typography </h2>
-                 <p>Réalisation d'une typographie modulaire et pochoir.
-                 <br>Création de l'intégralité de l'alphabet en bas de casse et réalisation d'une affiche.</p>
-              <a href="">see more</a>
+              <h2>Compause <span>- Foodtruck</span> </h2>
+                <p id="soustitre"> Création d'un concept de vente de nourriture nomade.</p>
+              <a href="tuttifrutti.html">see more</a>
             </article>
             <figure class="cbp-so-side cbp-so-side-right">
-              <img src="img_home/a_web.jpg" alt="img01">
+              <img src="img_home/compause.jpg" alt="Visuel bocaux en verre de 3 tailles">
             </figure>
           </section>
-          <section class="cbp-so-section">
-            <figure class="cbp-so-side cbp-so-side-left">
-              <img src="img_home/typographie.jpg" alt="img01">
-            </figure>
-            <article class="cbp-so-side cbp-so-side-right">
-              <h2>Circus <span> - Poster </span> </h2>
-              <p id="soustitre"> Réalisation d'une affiche à l'occasion du concours étudiant
-                du festival de l'affiche d'Échirolles. Le thème de cette édition était <span>"Le Cirque"</span> et faisait hommage à la célèbre école de l'affiche polonaise.</p>
 
-               <a href="">see more</a>
-      </article>
-          </section>
 
         </div>
       </div>
