--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,10 @@
           <section class="cbp-so-section">
             <article class="cbp-so-side cbp-so-side-left">
               <h2>Jutai <span> - Juliette Taillefer</span></h2>
-                <p > mail : juliette.taillefer@mail-ecv.fr</p>
+                <p > 21 years old student in graphics based in Paris. <br>
+                  Currently M1 Design and Strategy at ECV Paris after studying graphics 3 years in Bordeaux.<p>
+                  <P> mail : juliette.taillefer@mail-ecv.fr
+              <br> Crédit web-site : juliette taillefer ©</p>
             </article>
             <figure class="cbp-so-side cbp-so-side-right">
               <img src="img_home/prof.jpg" alt="img01">
