--- a/editorialworks.html
+++ b/editorialworks.html
@@ -27,6 +27,7 @@
   				</div>
   					<div class="frame__links">
   					<a href="index.html">home</a>
+            <a href="packagingworks.html">previous</a>
   				  <a href="brandingworks.html">next</a>
   				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
   				</div>
