--- a/packagingworks.html
+++ b/packagingworks.html
@@ -27,7 +27,7 @@
   				</div>
   					<div class="frame__links">
   					<a href="index.html">home</a>
-  				  <a href="brandingworks.html">next</a>
+  				  <a href="editorialworks.html">next</a>
   				<!--	<a href="https://github.com/codrops/DraggableMenu/">GitHub</a>-->
   				</div>
   	<!--<div class="frame__social">
